@@ -1,0 +1,4 @@
+
+// Global
+pref("extensions.firephp.enabled", true);
+
